<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FrmFunctionSetting">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopBar"
        style="@style/TopBarTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFunctionSettingsHeader"
            style="@style/LabelTitleTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnBack"
            style="@style/ButtonBackTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTopBar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/tvDes"
                style="@style/LabelTheme"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lblTut"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSw1"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvS1ON"
                    style="@style/LabelTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblOn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swBell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:thumb="@drawable/switch_thumb"
                    app:layout_constraintEnd_toStartOf="@+id/tvS1ON"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/switch_track" />

                <TextView
                    android:id="@+id/tvS1OFF"
                    style="@style/LabelTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/lblOff"
                    app:layout_constraintEnd_toStartOf="@+id/swBell"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLabelBell"
                    style="@style/LabelTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblNotificationTone"
                    app:layout_constraintEnd_toStartOf="@+id/tvS1OFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvNoticeBell"
                style="@style/LabelNoticeTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clSw1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSw2"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvNoticeBell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvS2ON"
                    style="@style/LabelTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/lblOn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swVibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:thumb="@drawable/switch_thumb"
                    app:layout_constraintEnd_toStartOf="@+id/tvS2ON"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/switch_track" />

                <TextView
                    android:id="@+id/tvS2OFF"
                    style="@style/LabelTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/lblOff"
                    app:layout_constraintEnd_toStartOf="@+id/swVibrate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLabelVibrate"
                    style="@style/LabelTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblVibrateNotification"
                    app:layout_constraintEnd_toStartOf="@+id/tvS2OFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvNoticeVibrate"
                style="@style/LabelNoticeTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clSw2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSw3"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvNoticeVibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvS3ON"
                    style="@style/LabelTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblOn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:thumb="@drawable/switch_thumb"
                    app:layout_constraintEnd_toStartOf="@+id/tvS3ON"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/switch_track" />

                <TextView
                    android:id="@+id/tvS3OFF"
                    style="@style/LabelTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/lblOff"
                    app:layout_constraintEnd_toStartOf="@+id/swSpeed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLabelSpeed"
                    style="@style/LabelTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblVehicleSpeedLinkFunction"
                    app:layout_constraintEnd_toStartOf="@+id/tvS3OFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvNoticeSpeed"
                style="@style/LabelNoticeTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clSw3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>